[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/visual/die.glb" type="PackedScene" id=1]
[ext_resource path="res://components/Die/Die.gd" type="Script" id=2]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.469, -0.329, -0.811, 0, 1, 0, -0.47, -0.33, 0.8, 0.94, -0.33, 0 )

[node name="Dice" type="RigidBody"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="WhitePoint1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.468824, -0.328585, -0.810818 )

[node name="WhitePoint2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.473414, -0.329976, 0.821856 )

[node name="EmptyPoint1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.940247, -0.330492, 0.00112343 )

[node name="EmptyPoint2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="die" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[connection signal="sleeping_state_changed" from="." to="." method="_on_Dice_sleeping_state_changed"]
